[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies.warp]
version = "0.3"

[dependencies.pretty_env_logger]
version = "0.4"

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.service]
git = "https://github.com/pop-map/service"
rev = "0493ab2"
features = [ "fake_auth" ]
