[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies.warp]
version = "0.3"

[dependencies.pretty_env_logger]
version = "0.4"

[dependencies.tokio]
version = "1"
features = [ "full" ]

[dependencies.popmap]
git = "https://github.com/pop-map/popmap"
rev = "0a73061"
features = [ ]

[dev-dependencies]
uuid = "1.2"
serde_json = "1"
